Add a test case for reading protbuf files into RDDs